# daily-sms-service

./: .env.example  .env.test  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_SUMMARY.md  README.md  alembic.ini  build.sh  dependencies.json  docker-entrypoint.sh  file_registry.json  manage_users.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  send_test_sms.py  send_test_sms_fixed.py  setup.py  test_complete_flow.py  test_db_connection.py
%userprofile%/.ssh/: id_ed25519  id_ed25519.pub
.github/workflows/: ci-cd.yml
docker/: docker-entrypoint.sh
docs/: PROJECT_GUIDE.md
migrations/: env.py
migrations/versions/: 20230915_initial.py  20240117_add_message_details.py  20240118_add_user_config.py  20240119_remove_email.py  20240119_remove_email_field.py  20240120_add_message_content.py  20240124_initial_schema.py  20240124_merge_heads.py
scripts/: check_daily_messages.py  check_scheduled_messages.py  migrate_render_db.py  process_scheduled.py  schedule_split_message.py  send_christmas_message.py  send_holiday_messages.py  send_split_messages.py  setup.bat  setup.sh  setup_dev.py  show_user_info.py  simulate_incoming.py  test_db.py  test_llm_scheduling.py  test_scheduler.py  test_scheduler_once.py  update_webhook.py  verify_deployment.py  verify_webhook.py
src/: __init__.py  app.py  message_generator.py  models.py  onboarding_service.py  scheduler.py  sms_service.py  user_cli.py  user_config_service.py
src/features/core/: FOLDER_SUMMARY.md  README.md  cli.py  tests.py
src/features/database_management/: FOLDER_SUMMARY.md  README.md  code.py  tests.py
src/features/deployment_monitoring/: FOLDER_SUMMARY.md  README.md  code.py  tests.py
src/features/docker_build_diagnostics/: FOLDER_SUMMARY.md  README.md  code.py  tests.py
src/features/feedback_analysis/: FOLDER_SUMMARY.md  README.md  code.py  tests.py
src/features/holiday_automation/: FOLDER_SUMMARY.md  README.md  code.py  tests.py
src/features/holiday_messaging/: FOLDER_SUMMARY.md  README.md  code.py  tests.py
src/features/message_generation/: FOLDER_SUMMARY.md  README.md  __init__.py  code.py  scheduler.py  tests.py
src/features/notification_system/: FOLDER_SUMMARY.md  README.md  __init__.py  code.py  sms.py  sms_service.py  tests.py
src/features/preference_detection/: FOLDER_SUMMARY.md  README.md  __init__.py  code.py  tests.py
src/features/rate_limiting/: FOLDER_SUMMARY.md  README.md  code.py  tests.py
tests/: conftest.py  test_app.py  test_message_generator.py  test_onboarding_service.py  test_rate_limiter.py  test_scheduler.py  test_sms_service.py  test_user_config_service.py
tests/features/: __init__.py
(+21 files in other folders)
