[tool.poetry]
name = "daily-positivity"
version = "0.1.0"
description = "Daily AI-generated positive SMS messages using GPT-4 and Twilio"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.3.3"
SQLAlchemy = "^2.0.20"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
openai = "^0.28.0"
twilio = "^8.5.0"
pytz = "^2023.3"
alembic = "^1.12.0"
gunicorn = "^21.2.0"
requests = "^2.31.0"
urllib3 = "^2.0.7"
python-json-logger = "^2.0.7"
tenacity = "^8.2.3"
Flask-APScheduler = "^1.13.1"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.5"
structlog = "^23.1.0"
Flask-Cors = "^4.0.0"
marshmallow = "^3.20.1"
email-validator = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.7.0"
flake8 = "^6.1.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-env = "^1.0.1"
pylint = "^2.17.5"
mypy = "^1.5.1"
pytest-asyncio = "^0.21.1"
pytest-timeout = "^2.1.0"
types-pytz = "^2023.3.0"
types-requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src --cov-report=term-missing"
env = [
    "FLASK_ENV=testing",
    "TESTING=true"
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # bad-continuation
    "C0326",  # bad-whitespace
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "flask_sqlalchemy.*",
    "flask_migrate.*",
    "twilio.*",
    "gunicorn.*",
    "pytest.*"
]
ignore_missing_imports = true
